final release configuration (1.0.0)

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,3 @@
 - Following release instructions at http://central.sonatype.org/pages/apache-maven.html
+
+- Coherent plan for handling strings with quotes in them
