- A little bit of cleanup and some thinking about future serialization capabilities - Updated "Add" method to work with paths - now all aspects of BagObject can implicitly   be path based (or not). - previous change introduced basic "Bag" object - still needs unit tests but encapsulates   the entire bag concept for users who want a simpler interface

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 - Following release instructions at http://central.sonatype.org/pages/apache-maven.html
     * mvn release:clean release:prepare && mvn release:perform
 
-
+- add xml serialization
+- rethink "toString", etc. as "toJSON"?
