--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,9 @@
 - Following release instructions at http://central.sonatype.org/pages/apache-maven.html
     * mvn release:clean release:prepare && mvn release:perform
 
-- add xml serialization
-- rethink "toString", etc. as "toJSON"?
+- some thinking about xml and arrays...
+- add xml deserialization
 - consider eliminating object creation in binary search
-- change BagObject so that "add" implicitly changes the underlying type to an array if it's not
-  already an array, and stores the original value in the new array
+- document the Bag type - along with the hierarchical indexing support
+- add a Database type, based on a bagarray, complete with sort, search, filter, etc.
+- split serializer tests into smaller pieces
