- Error handling in the parser with line and offset reporting about where the error was originally located. - some refactoring for coding standards

--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,4 @@
 - add xml deserialization
 - document the Bag type - along with the hierarchical indexing support
 - add a Database type, based on a bagarray, complete with sort, search, filter, etc.
+- add some error handling and reporting in the parser, so that users can know why they got null back
