some minor updates to handling of storing unsupported types

--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,6 @@
 - add xml deserialization
 - document the Bag type - along with the hierarchical indexing support
 - add a Database type, based on a bagarray, complete with sort, search, filter, etc.
+- consider BagObject.objectify invoking the Serializer when it encounters an unsupported type, or
+  throw an exception in that case rather than fail silently - with instructions to tell the user
+  they should use the Serializer if this is what they intended (maybe add 'addAsType' method?)
