--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,7 @@
 - "public" sweep
 - javadoc sweep
 - replace logging with a BagObject that contains the "last error", kind of like an exception
+- think about - "SELECT AS"
 
 Ways to create a BagObject (or BagArray):
 - new BagObject ().put(...);
