--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,8 @@
 - javadoc sweep
 - replace logging with a BagObject that contains the "last error", kind of like an exception
 - think about - "SELECT AS"
+- Kml file format for google maps
+- web post format
 
 Ways to create a BagObject (or BagArray):
 - new BagObject ().put(...);
