- A bit of reorganization in preparation for more formats - Added URL format reader and writer (query string in particular)

--- a/todo.txt
+++ b/todo.txt
@@ -15,10 +15,11 @@
 
 Formats to support
 - reader auto-detect the format?
-- XML
-- CSV
+- XML (application/xml or text/xml)
+- CSV (application/csv or text/csv)
 - Kml file format for google maps
-- web post format
+- web post format (application/x-www-form-urlencoded or multipart/form-data)
+- web URL format ()
 - Other?
 
 Ways to create a BagObject (or BagArray):
